# FastFillGameServer

./: README.md  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  entrypoint.prod.sh  entrypoint.sh  manage.py  pyproject.toml
app/fastfillgame/: asgi.py  settings.py  urls.py
app/game_server/: apps.py  consumer.py  views.py
nginx/: nginx.conf
