[project]
name = "fastfillgame"
version = "0.1.0"
description = ""
authors = [
    {name = "enzosoares",email = "enzo@soares.digital"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg[binary] (>=3.2.7,<4.0.0)",
    "channels[daphne] (>=4.2.2,<5.0.0)",
    "daphne (>=4.1.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
